<resources>
    <string name="app_name">Weather App</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">72°</string>
    <string name="feels_like">Feels like %d°</string>
    <string name="low">Low %d°</string>
    <string name="high">High %d°</string>
    <string name="humidity">Humidity %d%%</string>
    <string name="pressure">Pressure %dhPa</string>
    <string name="forecast">Forecast</string>
    <string name="degree">%d°</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="temperature">%s°</string>
    <string name="get_my_weather_for_my_location">Get Weather for My Location</string>

</resources>