<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/slategray"/>

    <TextView
        android:id="@+id/city_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="15dp" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="75sp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="75dp"
        />

    <TextView
        android:id="@+id/feels_like"
        android:text="@string/feels_like"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/current_temp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        />

    <TextView
        android:id="@+id/low"
        android:text="@string/low"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/feels_like"/>

    <TextView
        android:id="@+id/high"
        android:text="@string/high"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/low"
        app:layout_constraintTop_toBottomOf="@id/low"
        />

    <TextView
        android:id="@+id/Humidity"
        android:text="@string/humidity"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/low"
        app:layout_constraintTop_toBottomOf="@id/high"
        />

    <TextView
        android:id="@+id/pressure"
        android:text="@string/pressure"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Humidity"
        app:layout_constraintStart_toStartOf="@+id/low"
        />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sun"
        android:importantForAccessibility="no"
        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>